# cpp

./: .gitignore
part3/homework1/task1/: task1.cpp  words.txt
part3/homework1/task2/: task2.cpp  text.txt
part3/homework1/task3/: salary_statement.txt  task3.cpp
part3/homework1/task4/: task4.cpp
part3/homework1/task5/: task5.cpp
part3/homework1/task5/data/: answer10.txt  answer11.txt  answer13.txt  answer6.txt  answer7.txt  answer8.txt  answer9.txt  question1.txt  question10.txt  question11.txt  question12.txt  question13.txt  question2.txt  question3.txt  question4.txt  question5.txt  question6.txt  question7.txt  question8.txt  question9.txt
part3/homework10/task1/: main.cpp
part3/homework10/task2/: main.cpp
part3/homework10/task3/: main.cpp
part3/homework11/task1/: main.cpp
part3/homework12/task1/: CMakeLists.txt
part3/homework12/task1/src/: main.cpp
part3/homework12/task2/: CMakeLists.txt
part3/homework12/task2/src/: main.cpp
part3/homework12/task3/: CMakeLists.txt
part3/homework12/task3/src/: main.cpp
part3/homework13/task1/: main.cpp
part3/homework13/task2/: main.cpp
part3/homework13/task3/: CMakeLists.txt  igraph.cpp  igtaph.h  main.cpp  matrix_graph.cpp  matrix_graph.h
part3/homework13/task3/include/: igraph.h  list_graph.h  matrix_graph.h
part3/homework13/task3/src/: igraph.cpp  list_graph.cpp  main.cpp  matrix_graph.cpp
part3/homework14/task1/: movie.json
part3/homework14/task2/: CMakeLists.txt
part3/homework14/task2/src/: main.cpp
part3/homework14/task3/: company.pb.cc  company.pb.h  company.proto
part3/homework15/task1/: CMakeLists.txt  main.cpp
part3/homework15/task2/: CMakeLists.txt  main.cpp
part3/homework15/task3/: CMakeLists.txt  main.cpp
part3/homework15/task4/: CMakeLists.txt  main.cpp
part3/homework2/task1/: salary.txt  task1.cpp
part3/homework2/task2/: pic.txt  task2.cpp
part3/homework2/task3/: basket.txt  task3.cpp
part3/homework2/task4/: task4.cpp
part3/homework3/task1/: salary.txt  task1.cpp
part3/homework3/task2/: task2.cpp
part3/homework3/task3/: task.cpp
part3/homework3/task4/: task4.cpp
part3/homework4/task1/: task1.cpp
part3/homework4/task2/: task2.cpp
part3/homework4/task3/: task3.cpp
part3/homework5/task1/: task1.cpp
part3/homework5/task2/: task2.cpp
part3/homework5/task3/: task3.cpp
part3/homework6/task1/: task1.cpp
part3/homework6/task2/: task2.cpp
part3/homework6/task3/: task3.cpp
part3/homework7/task1/: 111.txt  CMakeLists.txt  main.cpp  surgeon.cpp  surgeon.h
part3/homework7/task1/include/: point.h
part3/homework7/task1/src/: CMakeLists.txt  point.cpp  surgeon.cpp
part3/homework7/task2/: CMakeLists.txt
part3/homework7/task2/include/: cpu.h  disk.h  gpu.h  kbd_.h  ram.h
part3/homework7/task2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
part3/homework8/task1/: CMakeLists.txt
part3/homework8/task1/include/: player.h  track.h
part3/homework8/task1/src/: CMakeLists.txt  main.cpp  player.cpp  track.cpp
part3/homework8/task2/: CMakeLists.txt
part3/homework8/task2/include/: phone.h  phone_book.h  phone_number.h
part3/homework8/task2/src/: CMakeLists.txt  main.cpp  phone.cpp  phone_book.cpp  phone_number.cpp
part3/homework8/task3/: CMakeLists.txt
part3/homework8/task3/include/: display.h  vector2D.h  window.h
part3/homework8/task3/src/: CMakeLists.txt  display.cpp  main.cpp  vector2D.cpp  window.cpp
part3/homework9/task1/: CMakeLists.txt
part3/homework9/task1/include/: branch.h  elf.h  forest.h
part3/homework9/task1/src/: branch.cpp  elf.cpp  forest.cpp  main.cpp
part3/homework9/task2/: CMakeLists.txt
part3/homework9/task2/include/: circle.h  coordinate.h  rectangle.h  shape.h  square.h  triangle.h
part3/homework9/task2/src/: circle.cpp  main.cpp  rectangle.cpp  shape.cpp  square.cpp  triangle.cpp
part4/homework1/: CMakeLists.txt  README.md
part4/homework1/include/: ai_player.h  game.h  human_player.h  player.h
part4/homework1/src/: ai_player.cpp  human_player.cpp  main.cpp  player.cpp
part4/homework2/: CMakeLists.txt
part4/homework2/app/: CMakeLists.txt
part4/homework2/game/: CMakeLists.txt
part4/homework2/game/src/: game.cpp  human_player.cpp
